Add a docker tag for the docker hub build

--- a/hooks/build
+++ b/hooks/build
@@ -8,7 +8,11 @@ echo "Build hook running"
 export BRANCH=${TRAVIS_BRANCH:-`git symbolic-ref --short HEAD`}
 export DATE=`date -u +"%Y-%m-%dT%H:%M:%SZ"`
 export COMMIT=${TRAVIS_COMMIT:-`git rev-parse --short HEAD`}
+export DOCKER_TAG=$BRANCH
+if [ $BRANCH = "master"]; then
+  DOCKER_TAG="latest"
+fi
 docker build --build-arg BUILD_DATE=$DATE \
              --build-arg VCS_REF=$COMMIT \
              --build-arg BRANCH=$BRANCH \
-             -t ${IMAGE_NAME} .
+             -t ${IMAGE_NAME}:${DOCKER_TAG} .
